Styles: Re-add rem units & fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -29,15 +29,18 @@ em {
     --register-section-color-active: #9b469c;
     
     --black-shadow: 1px 1px 3px black;
-    --box-shadow-color: #c9c9c9;
+    --box-shadow-color: #d3d3d3;
     
     --card-color: rgba(0, 0, 0, 0.6);
     --card-logo-shadow: drop-shadow(var(--black-shadow));
     --card-text-shadow: var(--black-shadow);
     --artist-link-text-shadow: var(--black-shadow);
 
-    --main-container-padding: 40px;
-    --medium-font-size: 2.3rem;
+    --main-container-padding: 64px;
+    --medium-font-size: 2.4rem;
+
+    --input-valid-color: dodgerblue;
+    --input-invalid-color: #f00000;
 
     font-size: 10px;
     color: var(--dark-gray);
@@ -62,7 +65,7 @@ input, button, textarea, select {
 
 body {
     height: 100vh;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-family: "rubik", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -70,12 +73,18 @@ body {
     flex-direction: row;
 }
 
+::selection {
+    background-color: var(--register-section-color-hover);
+    color: white;
+}
+
 /* Background / Window container */
 
 .background-container {
-    width: 37%;
-    background-color: orchid;
+    background-color: var(--register-section-color);
     background-image: url(./img/background.jpg);
+
+    width: 42%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 25% 50%;
@@ -85,12 +94,11 @@ body {
 
 .card-body {
     background-color: var(--card-color);
-
+    height: 160px;
     position: absolute;
     color: white;
     top: 184px;
     width: inherit;
-    height: 160px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -98,10 +106,10 @@ body {
 }
 
 .card-logo {
+    filter: var(--card-logo-shadow);
+
     max-width: 96px;
     margin-right: 10px;
-
-    filter: var(--card-logo-shadow);
 }
 
 .card-body p {
@@ -109,12 +117,13 @@ body {
 
     font-family: "hangyaku", sans-serif;
     font-style: normal;
-    font-size: 100px;
+    font-size: 10rem;
     color: white;
 }
 
 .artist-info {
     text-shadow: var(--artist-link-text-shadow);
+
     color: white;
     position: absolute;
     bottom: 10px;
@@ -176,15 +185,15 @@ body {
 .form-container {
     position: relative;
     background-color: var(--white);
-    box-shadow: 3px 3px 3px var(--box-shadow-color);
-    padding-top: 20px;
-    padding-bottom: 30px;
+    box-shadow: 3px 3px 4px var(--box-shadow-color);
+
+    padding-top: 24px;
+    padding-bottom: 32px;
     flex: 6;
 }
 
 .form-container > h3 {
     font-size: var(--medium-font-size);
-
     margin-bottom: 16px;
 }
 
@@ -204,6 +213,8 @@ body {
 
 .input-container label {
     letter-spacing: 1px;
+    margin-bottom: 1px;
+    user-select: none;
 }
 
 .input-container input {
@@ -223,6 +234,16 @@ body {
     transition: 100ms ease-in-out;
 }
 
+.input-container input:valid::selection {
+    background-color: var(--input-valid-color);
+    color: white;
+}
+
+.input-container input:invalid::selection {
+    background-color: var(--input-invalid-color);
+    color: white;
+}
+
 .input-container input:hover::placeholder,
 .input-container input:focus::placeholder {
     top: 0;
@@ -232,24 +253,20 @@ body {
 
 .input-container input:focus {
     box-shadow: 3px 3px 4px var(--box-shadow-color);
-    /* fix */
-    border: 1px solid dodgerblue;
-    outline: 0;
+    border: 1px solid var(--input-valid-color);
 
+    outline: 0;
     transition: 100ms ease-in-out;
 }
 
-
 .input-container input:invalid {
-    border: 1px solid #f00000;
+    border: 1px solid var(--input-invalid-color)
 }
-
 
 /* Register section */
 
 .register-container {
     background-color: var(--light-gray);
-
     flex: 8;
 }
 
@@ -257,7 +274,7 @@ body {
     box-shadow: 1px 1px 4px var(--box-shadow-color);
     background-color: var(--register-section-color);
 
-    margin: 36px 0;
+    margin: 32px 0;
     padding: 14px 52px;
     border-radius: 6px;
     font-weight: bold;
